--- a/src/resource/views/layouts/empty.hbs
+++ b/src/resource/views/layouts/empty.hbs
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo" />
-  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/image_fdrqpl.png" />
-  <link rel="stylesheet" href="/css/userDenyAccess.css">
-  <link rel="stylesheet" href="/css/signIn.css">
-  <link rel="stylesheet" href="/css/signUp.css">
-  <link rel="stylesheet" href="/css/body.css">
+  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
+  <link rel="stylesheet" href="/css/empty/denyAccess.css">
+  <link rel="stylesheet" href="/css/empty/signIn.css">
+  <link rel="stylesheet" href="/css/empty/signUp.css">
+  <link rel="stylesheet" href="/css/user/userBody.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
