--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo" />
-  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/image_fdrqpl.png" />
-  <link rel="stylesheet" href="/css/adminAllCustomers.css">
-  <link rel="stylesheet" href="/css/adminAllOrders.css">
-  <link rel="stylesheet" href="/css/adminAllProducts.css">
-  <link rel="stylesheet" href="/css/adminCreateProduct.css">
-  <link rel="stylesheet" href="/css/adminCustomer.css">
-  <link rel="stylesheet" href="/css/adminHome.css">
-  <link rel="stylesheet" href="/css/adminOrder.css">
-  <link rel="stylesheet" href="/css/adminSidebar.css">
-  <link rel="stylesheet" href="/css/adminTrashProducts.css">
-  <link rel="stylesheet" href="/css/adminUpdateProduct.css">
-  <link rel="stylesheet" href="/css/adminUpdateProfile.css">
-  <link rel="stylesheet" href="/css/body.css">
+  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
+  <link rel="stylesheet" href="/css/admin/adminAllCustomers.css">
+  <link rel="stylesheet" href="/css/admin/adminAllOrders.css">
+  <link rel="stylesheet" href="/css/admin/adminAllProducts.css">
+  <link rel="stylesheet" href="/css/admin/adminCreateProduct.css">
+  <link rel="stylesheet" href="/css/admin/adminCustomer.css">
+  <link rel="stylesheet" href="/css/admin/adminHome.css">
+  <link rel="stylesheet" href="/css/admin/adminOrder.css">
+  <link rel="stylesheet" href="/css/admin/adminSidebar.css">
+  <link rel="stylesheet" href="/css/admin/adminTrashProducts.css">
+  <link rel="stylesheet" href="/css/admin/adminUpdateProduct.css">
+  <link rel="stylesheet" href="/css/admin/adminUpdateProfile.css">
+  <link rel="stylesheet" href="/css/user/userBody.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
