--- a/src/resource/views/users/allBrands.hbs
+++ b/src/resource/views/users/allBrands.hbs
@@ -8,7 +8,7 @@
     {{#each brand}}
       <div class="brand">
         <a href="/all-products/all-brands/{{this.name}}">
-          <img src="{{this.img.path}}" alt="{{this.name}}"/>
+          <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy"/>
           {{this.name}}
         </a>
       </div>
