--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -77,7 +77,7 @@
             <span>Techcombank</span>
             <span>Đặng Quỳnh Ly</span>
           </div>
-          <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070720/web-img/fc4c4fd10517a949f006_ndjvt6.png" alt="loading">
+          <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070720/web-img/fc4c4fd10517a949f006_ndjvt6.png" alt="loading" loading="lazy">
         </div>
       </div>
     </div>
