--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -1,6 +1,6 @@
 <div class="sign-in-container">
   <div class="sign-in-form">
-    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.jpg" alt="login_img">
+    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.jpg" alt="login_img" loading="lazy">
     <div class="form-input">
       <p class="form-title">Đăng nhập</p>
       <form id="form-3" method="post" action="/authentication/checking-account">
