--- a/src/resource/views/users/updateProfile.hbs
+++ b/src/resource/views/users/updateProfile.hbs
@@ -1,7 +1,7 @@
 <div class="user-update-profile-container">
     <div class="sidebar-menu">
       <div class="avatar">
-        <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp" alt="{{userInfo.userInfo.name}}">
+        <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp" alt="{{userInfo.userInfo.name}}" loading="lazy">
         <span>{{userInfo.userInfo.name}}</span>
       </div>
       <div class="tag">
