--- a/src/public/css/user/userFooter.css
+++ b/src/public/css/user/userFooter.css
@@ -10,6 +10,9 @@
   a {
     text-decoration: none;
     color: black;
+    display: block;
+    width: fit-content;
+    min-width: 25px;
   }
 
   a:hover {
