--- a/src/public/css/user/userProduct.css
+++ b/src/public/css/user/userProduct.css
@@ -103,7 +103,7 @@
       display: flex;
       align-items: center;
       gap: 5px;
-      a { text-decoration: none;}
+      a { text-decoration: none }
       .add-to-cart, .buy-now, .out-of-order {
         display: flex;
         align-items: center;
@@ -111,11 +111,11 @@
         width: fit-content;
         height: 30px;
         border-radius: 5px;
-        padding: 10px;
+        padding: 15px;
       };
       .add-to-cart, .buy-now {
         border: 1px solid #D1A6A6;
-        p, a { color: #D1A6A6; text-decoration: none }
+        p, a { color: #D1A6A6; text-decoration: none; font-weight: bold; }
       }
       .out-of-order {
         display: none;
