--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -52,7 +52,7 @@
                 align-items: center
                 "
           >
-            <img src="{{this.img.path}}" alt="{{this.name}}"> 
+            <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
             <p>{{this.name}}</p>
           </td>  
           <td style="width: 10%;">{{this.categories}}</td>
