--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -11,16 +11,16 @@
   <div class="dropup-content">
     <div class="content">
       <a target="_blank" href="https://www.facebook.com/bunnylylyyy">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="loading"/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="loading" loading="lazy"/>
       </a>
     </div>               
     <div class="content">
       <a target="_blank" href="https://www.instagram.com/bunnyhouse.__/">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/225px-Instagram_logo_2022.svg.png" alt="loading"/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/225px-Instagram_logo_2022.svg.png" alt="loading" loading="lazy"/>
       </a>
     </div>               
     <div class="content">
-      <img src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-Zalo-Arc.png" alt="loading" style="width: 30px;"/>
+      <img src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-Zalo-Arc.png" alt="loading" style="width: 30px;" loading="lazy"/>
     </div> 
   </div>              
 </div>
