--- a/src/resource/views/partials/userAdvertise.hbs
+++ b/src/resource/views/partials/userAdvertise.hbs
@@ -1,14 +1,14 @@
 <div class="slideshow-container">
   <div class="mySlides fade">
-    <img src="https://cdn.mykiot.vn/2020/12/1609318855e1254ebb9274cc71451b02645764ea62.jpg" alt="loading">
+    <img src="https://cdn.mykiot.vn/2020/12/1609318855e1254ebb9274cc71451b02645764ea62.jpg" alt="loading" loading="lazy">
   </div>
 
   <div class="mySlides fade">
-    <img src="https://cdn.mykiot.vn/2021/01/1611024895f38363ff341b767a423b38c15b036ed0.jpg" alt="loading">
+    <img src="https://cdn.mykiot.vn/2021/01/1611024895f38363ff341b767a423b38c15b036ed0.jpg" alt="loading" loading="lazy">
   </div>
 
   <div class="mySlides fade">
-    <img src="https://cdn.mykiot.vn/2021/04/161724737338b95a8a2346880ad73e88fb6ff03e98.jpg" alt="loading">
+    <img src="https://cdn.mykiot.vn/2021/04/161724737338b95a8a2346880ad73e88fb6ff03e98.jpg" alt="loading" loading="lazy">
   </div>
 
   <p class="prev" onclick="plusSlides(-1)">❮</p>
