--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -22,7 +22,7 @@
     {{#each newProduct}}
     <a href="/product/{{this.slug}}">
       <div class="product">
-        <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1">
+        <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1" loading="lazy">
         <p id="product-old-price"><del>{{this.oldPrice}} VND</del></p>
         <p id="product-price">{{this.price}} VND</p>
         <p id="product-details">{{this.name}}</p>
@@ -118,37 +118,37 @@
           <li>
             <a href="/all-products/makeup/phan-ma">
               Phấn má
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080154/web-img/o1th0fymd3gzjzgwbrbz_ghkt70.jpg" alt="loading">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080154/web-img/o1th0fymd3gzjzgwbrbz_ghkt70.jpg" alt="loading" loading="lazy">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/mascara">
               Mascara
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080143/web-img/ejschlqugyhr4asayspm_hbrdiy.jpg" alt="loading">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080143/web-img/ejschlqugyhr4asayspm_hbrdiy.jpg" alt="loading" loading="lazy">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/ke-mat">
               Kẻ mắt
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080172/web-img/djy7wut0chooynp65hov_xxbwxi.jpg" alt="loading">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080172/web-img/djy7wut0chooynp65hov_xxbwxi.jpg" alt="loading" loading="lazy">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/kem-chong-nang">
               Kem chống nắng
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080150/web-img/hspzixrzay9whcg51meo_h4iotk.jpg" alt="loading">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080150/web-img/hspzixrzay9whcg51meo_h4iotk.jpg" alt="loading" loading="lazy">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/che-khuyet-diem">
               Che khuyết điểm
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080188/web-img/vr3yzblr5g0crzkgj9po_e8mrjp.jpg" alt="loading">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080188/web-img/vr3yzblr5g0crzkgj9po_e8mrjp.jpg" alt="loading" loading="lazy">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/son">
               Son
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080146/web-img/jd2llxirfbwpdwekk7lz_cpznu5.jpg" alt="loading">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080146/web-img/jd2llxirfbwpdwekk7lz_cpznu5.jpg" alt="loading" loading="lazy">
             </a>
           </li>
         </ul>
@@ -161,77 +161,77 @@
             <li>
               <a href="/all-products/skincare/xit-khoang">
                 Xịt khoáng
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079975/web-img/mhseyytpn8h6zvg4tabd_r57wfv.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079975/web-img/mhseyytpn8h6zvg4tabd_r57wfv.jpg" alt="loading" loading="lazy">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/mat-na">
                 Mặt nạ
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079978/web-img/sfudjh00pykqpvav4sgy_xqbzev.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079978/web-img/sfudjh00pykqpvav4sgy_xqbzev.jpg" alt="loading" loading="lazy">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/serum">
                 Serum
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079970/web-img/kjz3zdlyxo76h1p3t6lm_uk4agl.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079970/web-img/kjz3zdlyxo76h1p3t6lm_uk4agl.jpg" alt="loading" loading="lazy">
             </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/bha">
                 BHA
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079984/web-img/tw8lej0aklemwinukmbq_n00mji.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079984/web-img/tw8lej0aklemwinukmbq_n00mji.jpg" alt="loading" loading="lazy">
             </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/tay-da-chet">
                 Tẩy da chết
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079964/web-img/ettmlmf7s4x0g8d98nvq_vklnps.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079964/web-img/ettmlmf7s4x0g8d98nvq_vklnps.jpg" alt="loading" loading="lazy">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/duong-da">
                 Dưỡng da
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079987/web-img/xkkpidyegeiesbea9rk5_b4tgej.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079987/web-img/xkkpidyegeiesbea9rk5_b4tgej.jpg" alt="loading" loading="lazy">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/toner">
                 Toner
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079967/web-img/k0easo5upkoydszse1i3_jp7mrg.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079967/web-img/k0easo5upkoydszse1i3_jp7mrg.jpg" alt="loading" loading="lazy">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/nuoc-tay-trang">
                 Nước tẩy trang
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079972/web-img/md2husxtaoo5kmyp6qxy_cmvvnp.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079972/web-img/md2husxtaoo5kmyp6qxy_cmvvnp.jpg" alt="loading" loading="lazy">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/cham-mun">
                 Chấm mụn
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079961/web-img/almfjrziupsfnxh4ikej_hfcib1.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079961/web-img/almfjrziupsfnxh4ikej_hfcib1.jpg" alt="loading" loading="lazy">
               </a>
             </li>
             
             <li>
               <a href="/all-products/skincare/kem-duong-am">
                 Kem dưỡng ẩm
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079981/web-img/sznuvy878jkx6irn87wt_molje8.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079981/web-img/sznuvy878jkx6irn87wt_molje8.jpg" alt="loading" loading="lazy">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/sua-rua-mat">
                 Sữa rửa mặt
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079959/web-img/zeuznbkrsspuucipy2bh_akixfj.jpg" alt="loading">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079959/web-img/zeuznbkrsspuucipy2bh_akixfj.jpg" alt="loading" loading="lazy">
               </a>
             </li>
         </ul>
