--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -1,7 +1,7 @@
 <div class="sign-up-container">
   <div class="sign-up-form">
     <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.jpg" alt="signup_img">
-    <div class="form-input">
+    <div class="form-input" loading="lazy">
       <p class="form-title">Đăng ký</p>
       <form id="form-2" method="post" action="/authentication/creating-account">
         <div class="form-group">
