--- a/src/public/css/user/userAdvertise.css
+++ b/src/public/css/user/userAdvertise.css
@@ -6,7 +6,7 @@
     justify-content: center;
     img {
       vertical-align: middle;
-      max-width: 100%;
+      max-width: 1300px;
       height: auto;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     };
