--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -4,23 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo"/>
-  <meta name="description" content="Buny Store - Cửa hàng mỹ phẩm chính hãng, đa dạng các sản phẩm chăm sóc da và trang điểm từ các thương hiệu uy tín. Hãy khám phá bí quyết làm đẹp cùng Buny Store thôi nàooo!">
+  <meta name="description" content="Buny Store - Cửa hàng mỹ phẩm chính hãng với sản phẩm chăm sóc da và trang điểm từ thương hiệu uy tín. Khám phá bí quyết làm đẹp tại Buny Store!">
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/user/userAdvertise.css">
-  <link rel="stylesheet" href="/css/user/userAllBrands.css">
-  <link rel="stylesheet" href="/css/user/userAllProducts.css">
-  <link rel="stylesheet" href="/css/user/userAllOrders.css">
-  <link rel="stylesheet" href="/css/user/userFooter.css">
-  <link rel="stylesheet" href="/css/user/userHeader.css">
-  <link rel="stylesheet" href="/css/user/userHome.css">
-  <link rel="stylesheet" href="/css/user/userIntroduce.css">
-  <link rel="stylesheet" href="/css/user/userOrder.css">
-  <link rel="stylesheet" href="/css/user/userOrdersChecking.css">
-  <link rel="stylesheet" href="/css/user/userProduct.css">
-  <link rel="stylesheet" href="/css/user/userUpdateProfile.css">
-  <link rel="stylesheet" href="/css/user/userBody.css">
-  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+  <link rel="stylesheet" href="/css/user/userAdvertise.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userAllBrands.css"media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userAllProducts.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userAllOrders.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userFooter.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userHeader.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userHome.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userIntroduce.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userOrder.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userOrdersChecking.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userProduct.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userUpdateProfile.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userBody.css" media="print" onload="this.media='all'">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
