--- a/src/public/css/admin/adminSidebar.css
+++ b/src/public/css/admin/adminSidebar.css
@@ -27,6 +27,7 @@
   }
   .admin-button {
     margin-top: 20px;
+    padding: 0px 5px;
     .sidebar-button {
       width: 100%;
       height: 50px;
@@ -38,6 +39,7 @@
       font-weight: bolder;
       text-transform:capitalize;
       gap: 10px;
+      border-radius: 5px;
       i { 
         padding-left: 10px;
         font-size: 20px
