--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -1,7 +1,7 @@
 <div class="admin-sidebar-container">
   <div class="admin-account">
-    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070717/web-img/admin_xernxj.webp" alt="avatar" loading="lazy"/>
-    <div>
+    {{!-- <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070717/web-img/admin_xernxj.webp" alt="avatar" loading="lazy"/> --}}
+    <div style="padding-left: 10px;">
       <p>Xin chào Nam Vũ,</p>
       <p id="welcome-text"></p>
     </div>
