--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -174,7 +174,7 @@
     <i class="fi fi-rr-shopping-cart-add"></i>
   </a>
 
-  <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" class="dropdown-avatar" alt="loading" loading="lazy"/>
+  <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" class="dropdown-avatar" alt="loading"/>
 </div>
 
 <div class="avatar-menu">
