--- a/src/public/css/user/userBody.css
+++ b/src/public/css/user/userBody.css
@@ -1,5 +1,6 @@
 @import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-straight/css/uicons-regular-straight.css');
 @import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-thin-rounded/css/uicons-thin-rounded.css');
 
 body {
   background-color: #FFDFDF;
