--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -23,8 +23,8 @@
     <a href="/product/{{this.slug}}">
       <div class="product">
         <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1" loading="lazy">
-        <p id="product-old-price"><del>{{this.oldPrice}} VND</del></p>
-        <p id="product-price">{{this.price}} VND</p>
+        <del><p id="product-old-price">{{this.oldPrice}}</p></del>
+        <p id="product-price">{{this.price}}</p>
         <p id="product-details">{{this.name}}</p>
         <p id="product-rate">
           {{this.rate}}/5
@@ -45,10 +45,15 @@
 
 <script>
   // update main-title base on params.slug
-  var getSlug = `{{type}}`
-  var mainTitle = document.querySelector('div.main-title').querySelector('b')
+  var getSlug             = `{{type}}`
+  var mainTitle           = document.querySelector('div.main-title').querySelector('b')
   var getSkincareCategory = document.querySelector('div.all-category-skincare')
-  var getMakeupCategory = document.querySelector('div.all-category-makeup')
+  var getMakeupCategory   = document.querySelector('div.all-category-makeup')
+  var allProductOldPrices = document.querySelectorAll('p#product-old-price')
+  var allProductPrices    = document.querySelectorAll('p#product-price')
+  
+  allProductOldPrices.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
+  allProductPrices.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
 
   switch (getSlug) {
     case 'flash-sale': 
