--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -13,8 +13,8 @@
     <a href="/product/{{this.slug}}">
       <div class="product">
         <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-        <del style="color: black;"><p id="product-old-price">{{this.oldPrice}} VND</p></del>
-        <p id="product-price">{{this.price}} VND</p>
+        <del style="color: black;"><p id="product-old-price">{{this.oldPrice}}</p></del>
+        <p id="product-price">{{this.price}}</p>
         <p id="product-details">{{this.name}}</p>
         <p id="product-rate">
           {{this.rate}}/5
@@ -41,7 +41,7 @@
     <a href="/product/{{this.slug}}">
       <div class="product">
         <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-        <p id="product-price">{{this.price}} VND</p>
+        <p id="product-price">{{this.price}}</p>
         <p id="product-details">{{this.name}}</p>
         <p id="product-rate">
           {{this.rate}}/5
@@ -68,7 +68,7 @@
     <a href="/product/{{this.slug}}">
       <div class="product">
         <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-        <p id="product-price">{{this.price}} VND</p>
+        <p id="product-price">{{this.price}}</p>
         <p id="product-details">{{this.name}}</p>
         <p id="product-rate">
           {{this.rate}}/5
@@ -108,12 +108,7 @@
   var allProductOldPrices = document.querySelectorAll('p#product-old-price')
   var allProductPrices    = document.querySelectorAll('p#product-price')
   
-  allProductOldPrices.forEach((price) => {
-    price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.')
-  })
-  
-  allProductPrices.forEach((price) => {
-    price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.')
-  })
+  allProductOldPrices.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
+  allProductPrices.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
 </script>
 
