--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -20,24 +20,12 @@
     <table>
       <thead>
         <tr>
-          <td>
-            Id
-          </td>
-          <td>
-            Hãng
-          </td>
-          <td>
-            Tên
-          </td>
-          <td>
-            Loại
-          </td>
-          <td>
-            Giá
-          </td>
-          <td>
-            Lựa chọn
-          </td>
+          <td> Id       </td>
+          <td> Hãng     </td>
+          <td> Tên      </td>
+          <td> Loại     </td>
+          <td> Giá      </td>
+          <td> Lựa chọn </td>
         </tr>
       </thead>
 
@@ -56,11 +44,10 @@
             <p>{{this.name}}</p>
           </td>  
           <td style="width: 10%;">{{this.categories}}</td>
-          <td style="width: 10%;">{{this.price}} đ</td>
+          <td style="width: 10%;" id="product-price">{{this.price}}</td>
           <td style="width: 10%;">
             <a href="/admin/updating/{{this._id}}" class="update-button"><button>Sửa</button></a>
-            <button id="{{this._id}}" onclick="reply_click(this.id)">Xoá</button>
-            
+            <button id="{{this._id}}" onclick="reply_click(this.id)">Xoá</button> 
           </td>
         </tr>
         {{/each}}
@@ -90,9 +77,12 @@
 <script>
   // display delete confirmation box
   let courseId;
-  let deleteForm = document.forms['delete-form']
+  let deleteForm   = document.forms['delete-form']
   let deleteButton = document.getElementById('delete-button')
-  let formButton = document.getElementsByClassName('form-button')
+  let formButton   = document.getElementsByClassName('form-button')
+  var productPrice = document.querySelectorAll('td#product-price')
+
+  productPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
 
   function reply_click(clicked_id) {
     document.getElementById('id01').style.display='block'
@@ -144,5 +134,4 @@
       option.setAttribute('selected', 'selected')
     }
   })
-  
 </script>
