--- a/src/resource/views/admin/order.hbs
+++ b/src/resource/views/admin/order.hbs
@@ -3,71 +3,39 @@
     <table id="table-1">
       <thead>
         <tr>
-          <td colspan="2">
-            Thông tin chung
-          </td>
+          <td colspan="2"> Thông tin chung </td>
         </tr>
       </thead>
       <tr>
-        <td>
-          Mã Đơn
-        </td>
-        <td>
-          {{order._id}}
-        </td>
+        <td> Mã Đơn </td>
+        <td> {{order._id}} </td>
       </tr>
       <tr>
-        <td>
-          Ngày Đặt
-        </td>
-        <td>
-          {{order.createdAt}}
-        </td>
+        <td> Ngày Đặt </td>
+        <td> {{order.createdAt}} </td>
       </tr>
       <tr>
-        <td>
-          Khách Hàng
-        </td>
-        <td>
-          {{order.customerInfo.name}}
-        </td>
+        <td> Khách Hàng </td>
+        <td> {{order.customerInfo.name}} </td>
       </tr>
       <tr>
-        <td>
-          SĐT
-        </td>
-        <td>
-          {{order.customerInfo.phone}}
-        </td>
+        <td> SĐT </td>
+        <td> {{order.customerInfo.phone}} </td>
       </tr>
       <tr>
-        <td>
-          Địa Chỉ
-        </td>
-        <td>
-          {{order.customerInfo.address}}
-        </td>
+        <td> Địa Chỉ </td>
+        <td> {{order.customerInfo.address}} </td>
       </tr>
       <tr>
-        <td>
-          Ghi Chú
-        </td>
-        <td>
-          {{order.customerInfo.note}}
-        </td>
+        <td> Ghi Chú </td>
+        <td> {{order.customerInfo.note}} </td>
       </tr>
       <tr>
-        <td>
-          Tổng Tiền
-        </td>
-        <td>
-          {{order.totalOrderPrice}}đ
-        </td>
+        <td> Tổng Tiền </td>
+        <td id="total-order-price"> {{order.totalOrderPrice}}đ </td>
       </tr>
       <tr>
-        <td>
-          Trạng thái đơn
-        </td>
+        <td> Trạng thái đơn </td>
         <td>
           <div>
             <input type="radio" id="preparing" name="status" value="preparing">
@@ -99,10 +67,10 @@
       <tbody>
         {{#each order.products}}
         <tr>
-          <td><p>{{this.name}}</p>                               </td>
-          <td style="text-align: center;">{{this.price}}đ        </td>
-          <td style="text-align: center;">{{this.quantity}}      </td>
-          <td style="text-align: center;">{{this.totalPrice}}đ   </td>
+          <td><p>{{this.name}}</p>                                                     </td>
+          <td style="text-align: center;" id="product-price">      {{this.price}}      </td>
+          <td style="text-align: center;">                         {{this.quantity}}   </td>
+          <td style="text-align: center;" id="total-product-price">{{this.totalPrice}} </td>
         </tr>
         {{/each}}
       </tbody>
@@ -116,6 +84,13 @@
   var getPreparingButton  = document.querySelector('label#preparing')
   var getDeliveringButton = document.querySelector('label#delivering')
   var getDoneButton       = document.querySelector('label#done')
+  var totalOrderPrice    = document.querySelectorAll('td#total-order-price')
+  var productPrice       = document.querySelectorAll('td#product-price')
+  var totalProductPrice  = document.querySelectorAll('td#total-product-price')
+  
+  totalOrderPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
+  productPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
+  totalProductPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
 
   if (`{{order.status}}` === 'preparing') {
     getPreparingButton.style.backgroundColor = 'white'
