--- a/src/resource/views/admin/trash.hbs
+++ b/src/resource/views/admin/trash.hbs
@@ -7,24 +7,12 @@
     <table style="width:100%">
       <thead>
         <tr>
-          <td>
-            Id
-          </td>
-          <td>
-            Hãng
-          </td>
-          <td>
-            Tên
-          </td>
-          <td>
-            Loại
-          </td>
-          <td>
-            Giá
-          </td>
-          <td>
-            Lựa chọn
-          </td>
+          <td> Id       </td>
+          <td> Hãng     </td>
+          <td> Tên      </td>
+          <td> Loại     </td>
+          <td> Giá      </td>
+          <td> Lựa chọn </td>
         </tr>
       </thead>
 
@@ -43,7 +31,7 @@
             <p>{{this.name}}</p>
           </td>
           <td style="width: 10%;">{{this.categories}}</td>
-          <td style="width: 10%;">{{this.price}}</td>
+          <td style="width: 10%;" id="product-price">{{this.price}}</td>
           <td style="width: 15%;">
             <button id="{{this._id}}" onclick="clickToRestore(this.id)">Khôi Phục</button>
             <button id="{{this._id}}" onclick="clickToDelete(this.id)">Xoá</button>
@@ -85,10 +73,13 @@
 <script>
   // delete button
   var productId;
-  var deleteForm = document.forms['delete-form']
-  var restoreForm = document.forms['restore-form']
-  var deleteButton = document.getElementById('delete-button')
+  var deleteForm    = document.forms['delete-form']
+  var restoreForm   = document.forms['restore-form']
+  var deleteButton  = document.getElementById('delete-button')
   var restoreButton = document.getElementById('restore-button')
+  var productPrice  = document.querySelectorAll('td#product-price')
+
+  productPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
 
   function clickToDelete(clicked_id) {
     document.getElementById('id01').style.display='block'
