--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -22,11 +22,11 @@
     </a>
     <a href="/admin/all-stores" class="sidebar-button" id="stores">
       <i class="fi fi-rr-store-alt"></i>
-      <p>Cửa hàng</p>
+      <p>Cửa hàng (Đang làm)</p>
     </a>
     <a href="/admin/all-stores" class="sidebar-button" id="employees">
       <i class="fi fi-rr-users"></i>
-      <p>Nhân sự</p>
+      <p>Nhân sự (Đang làm)</p>
     </a>
     <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="total-products">
       <i class="fi fi-rr-box-open"></i>
@@ -34,7 +34,7 @@
     </a>
     <a href="/admin/all-brands" class="sidebar-button" id="total-brands">
       <i class="fi fi-rr-box-open"></i>
-      <p>Đối tác</p>
+      <p>Đối tác (Đang làm)</p>
     </a>
     <a href="/admin/trash" class="sidebar-button" id="trash">
       <i class="fi fi-br-trash"></i>
