--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo" />
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
-  <link rel="stylesheet" href="/css/admin/adminAllCustomers.css">
-  <link rel="stylesheet" href="/css/admin/adminAllOrders.css">
-  <link rel="stylesheet" href="/css/admin/adminAllProducts.css">
-  <link rel="stylesheet" href="/css/admin/adminCreateProduct.css">
-  <link rel="stylesheet" href="/css/admin/adminCustomer.css">
-  <link rel="stylesheet" href="/css/admin/adminHome.css">
-  <link rel="stylesheet" href="/css/admin/adminOrder.css">
+  <link rel="stylesheet" href="/css/admin/adminAllCustomers.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminAllOrders.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminAllProducts.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminCreateProduct.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminCustomer.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminHome.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminOrder.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminSidebar.css">
-  <link rel="stylesheet" href="/css/admin/adminTrashProducts.css">
-  <link rel="stylesheet" href="/css/admin/adminUpdateProduct.css">
-  <link rel="stylesheet" href="/css/admin/adminUpdateProfile.css">
+  <link rel="stylesheet" href="/css/admin/adminTrashProducts.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminUpdateProduct.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminUpdateProfile.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminBody.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
