--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -12,14 +12,14 @@
   <link rel="stylesheet" href="/css/user/userAllProducts.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/userAllOrders.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/userFooter.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userHeader.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userHeader.css">
   <link rel="stylesheet" href="/css/user/userHome.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/userIntroduce.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/userOrder.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/userOrdersChecking.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/userProduct.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/user/userUpdateProfile.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userBody.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/userBody.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
