--- a/src/resource/views/partials/denyAdminAccess.hbs
+++ b/src/resource/views/partials/denyAdminAccess.hbs
@@ -1,4 +1,4 @@
 <div class="deny-access-container">
-  <h1>M là admin mà, không cho xem linh tinh, tự tạo tài khoản mới để xem đi nhé !!!</h1>
+  <h1>Bạn đang truy cập quyền admin, không xem được !!!</h1>
   <h3><a href="/admin">Về trang admin</a></h3>
 </div>
