--- a/src/resource/views/layouts/empty.hbs
+++ b/src/resource/views/layouts/empty.hbs
@@ -16,6 +16,10 @@
   <title>{{title}}</title>
 </head>
 <body>
+  <div class="preloader">
+    <div class="loading"></div>
+    <h3 style="color: #D1A6A6;"></h3>
+  </div>
   
   <main>
     {{{body}}}
@@ -23,3 +27,10 @@
 
 </body>
 </html>
+
+<script>
+  window.addEventListener('load', () => {
+    const preloader = document.querySelector('div.preloader')
+    preloader.classList.add('inactive')
+  })
+</script>
