--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -28,11 +28,11 @@
         <p id="product-details">{{this.name}}</p>
         <p id="product-rate">
           {{this.rate}}/5
-          <span class="fa fa-star checked"></span>
-          <span class="fa fa-star checked"></span>
-          <span class="fa fa-star checked"></span>
-          <span class="fa fa-star checked"></span>
-          <span class="fa fa-star checked"></span>
+          <i class="fi fi-ss-star"></i>
+          <i class="fi fi-ss-star"></i>
+          <i class="fi fi-ss-star"></i>
+          <i class="fi fi-ss-star"></i>
+          <i class="fi fi-ss-star"></i>
         </p>
       </div>
     </a>
