--- a/src/public/css/user/userHeader.css
+++ b/src/public/css/user/userHeader.css
@@ -16,8 +16,7 @@ header {
     align-items: center;
     justify-content: center;
     img {
-      /* max-width: 50px; */
-      aspect-ratio: 1 / 1;
+      max-width: 50px;
     }
   };
   .menu {
