--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -10,11 +10,11 @@
       <div class="title">
         <h4 id="product-rate">
           {{newProduct.rate}}/5
-          <span class="fa fa-star checked"></span>
-          <span class="fa fa-star checked"></span>
-          <span class="fa fa-star checked"></span>
-          <span class="fa fa-star checked"></span>
-          <span class="fa fa-star checked"></span>
+          <i class="fi fi-ss-star"></i>
+          <i class="fi fi-ss-star"></i>
+          <i class="fi fi-ss-star"></i>
+          <i class="fi fi-ss-star"></i>
+          <i class="fi fi-ss-star"></i>
         </h4>
         <h3>{{newProduct.brand}}</h3>
         <h1>{{newProduct.name}}</h1>
